# File-Scanner

./: README.md  pyproject.toml
src/file_scanner_feverbenj/: Scanner.py
