[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file_scanner_feverbenj"
version = "0.0.1"
authors = [
  { name="Benjamin Fever", email="ben.fever07@gmail.com" },
]
description = "This package is a file reader inspired off the java.util.scanner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""